--- a/index.qmd
+++ b/index.qmd
@@ -30,11 +30,11 @@ This is a test document. Move along, folks — nothing to see here! 👀🙈
 
 ## Heading 2 {#sec-heading-2}
 
-*Lorem ipsum dolor* sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Donec sed odio operae, eu vulputate felis **rhoncus** (`{r} pi |> format_to_md_latex("\\%") %>% paste0("n = ", .)`). Salutantibus vitae elit libero, a pharetra augue. Nihil hic munitissimus habendi senatus locus, nihil horum? A communi observantia non est recedendum [@einstein1905a].
+*Lorem ipsum dolor* sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Donec sed odio operae, eu vulputate felis **rhoncus** (`{r} pi |> format_to_md_latex("\\%") %>% paste0("n = ", .) |> I()`). Salutantibus vitae elit libero, a pharetra augue. Nihil hic munitissimus habendi senatus locus, nihil horum? A communi observantia non est recedendum [@einstein1905a].
 
 ### Heading 3 {#sec-heading-3}
 
-Quisque ut dolor gravida, placerat libero vel, euismod. Ambitioni dedisse **scripsisse** $`{r} format(10^5, big.mark = ",")`$ iudicaretur. Donec sed odio operae, eu vulputate felis rhoncus. *Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae* [@einstein1935].
+Quisque ut dolor gravida, placerat libero vel, euismod. Ambitioni dedisse **scripsisse** $`{r} format(10^5, big.mark = ",") |> I()`$ iudicaretur. Donec sed odio operae, eu vulputate felis rhoncus. *Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae* [@einstein1935].
 
 $$
 f(x, y) = f(x_{0}, y) + \cfrac{\partial f}{\partial x} (x_{0}, y) (x - x_{0}) + \cfrac{1}{2!} \cfrac{\partial^{2} f}{\partial x^{2}} (x_{0}, y) (x - x_{0})^{2} + \cdots 
@@ -42,11 +42,11 @@ $$ {#eq-test}
 
 #### Heading 4 {#sec-heading-4}
 
-Ab illo tempore, ab est sed immemorabili. *Cum sociis natoque penatibus et magnis dis* `{r} 5^5 |> format_to_md_latex()` parturient @eq-test. Quam diu etiam furor iste tuus nos eludet?^[Fabio vel iudice vincam, sunt in culpa qui officia [@schelling1971].] Ut enim ad minim veniam, @sec-heading-5 (`@sec-heading-5`) or simply click [here](#sec-heading-5) (`[here](#sec-heading-5)`) quis nostrud exercitation [@fisher1932].
+Ab illo tempore, ab est sed immemorabili. *Cum sociis natoque penatibus et magnis dis* `{r} 5^5 |> format_to_md_latex() |> I()` parturient @eq-test. Quam diu etiam furor iste tuus nos eludet?^[Fabio vel iudice vincam, sunt in culpa qui officia [@schelling1971].] Ut enim ad minim veniam, @sec-heading-5 (`@sec-heading-5`) or simply click [here](#sec-heading-5) (`[here](#sec-heading-5)`) quis nostrud exercitation [@fisher1932].
 
 ##### Heading 5 {#sec-heading-5}
 
-Ab illo tempore, ab est sed immemorabili. **Cum sociis natoque penatibus et magnis dis** $`{r} format(exp(1), big.mark = ",")`$ parturient (@cnj-hypothesis-test). Quam diu etiam furor iste tuus nos eludet? Ut enim ad minim veniam, quis nostrud exercitation [@neyman1928; @neyman1928a].
+Ab illo tempore, ab est sed immemorabili. **Cum sociis natoque penatibus et magnis dis** $`{r} format(exp(1), big.mark = ",") |> I()`$ parturient (@cnj-hypothesis-test). Quam diu etiam furor iste tuus nos eludet? Ut enim ad minim veniam, quis nostrud exercitation [@neyman1928; @neyman1928a].
 
 ::: {#cnj-hypothesis-test}
 ## Data Test – Full Version
