--- a/index.qmd
+++ b/index.qmd
@@ -30,19 +30,19 @@ This is a test document. Move along, folks — nothing to see here! 👀🙈
 
 ## Heading 2 {#sec-heading-2}
 
-*Lorem ipsum dolor* sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Donec sed odio operae, eu vulputate felis **rhoncus** (`{r} pi |> format_to_md_latex("\\%") %>% paste0("n = ", .) |> I()`). Salutantibus vitae elit libero, a pharetra augue. Nihil hic munitissimus habendi senatus locus, nihil horum? A communi observantia non est recedendum [@einstein1905a].
+*Lorem ipsum dolor* sit amet, consectetur adipisici elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua [@begueria2024]. Donec sed odio operae, eu vulputate felis **rhoncus** (`{r} pi |> format_to_md_latex("\\%") %>% paste0("n = ", .) |> I()`). Salutantibus vitae elit libero, a pharetra augue. Nihil hic munitissimus habendi senatus locus, nihil horum? A communi observantia non est recedendum [@einstein1905a].
 
 ### Heading 3 {#sec-heading-3}
 
-Quisque ut dolor gravida, placerat libero vel, euismod. Ambitioni dedisse **scripsisse** $`{r} format(10^5, big.mark = ",") |> I()`$ iudicaretur. Donec sed odio operae, eu vulputate felis rhoncus. *Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae* [@einstein1935].
+Quisque ut dolor gravida, placerat libero vel, euismod [@rcoreteama]. Ambitioni dedisse **scripsisse** $`{r} format(10^5, big.mark = ",") |> I()`$ iudicaretur. Donec sed odio operae, eu vulputate felis rhoncus. *Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae* [@einstein1935].
 
 $$
 f(x, y) = f(x_{0}, y) + \cfrac{\partial f}{\partial x} (x_{0}, y) (x - x_{0}) + \cfrac{1}{2!} \cfrac{\partial^{2} f}{\partial x^{2}} (x_{0}, y) (x - x_{0})^{2} + \cdots 
-$$ {#eq-test}
+$$ {#eq-taylor-expansion}
 
 #### Heading 4 {#sec-heading-4}
 
-Ab illo tempore, ab est sed immemorabili. *Cum sociis natoque penatibus et magnis dis* `{r} 5^5 |> format_to_md_latex() |> I()` parturient @eq-test. Quam diu etiam furor iste tuus nos eludet?^[Fabio vel iudice vincam, sunt in culpa qui officia [@schelling1971].] Ut enim ad minim veniam, @sec-heading-5 (`@sec-heading-5`) or simply click [here](#sec-heading-5) (`[here](#sec-heading-5)`) quis nostrud exercitation [@fisher1932].
+Ab illo tempore, ab est sed immemorabili. *Cum sociis natoque penatibus et magnis dis* `{r} 5^5 |> format_to_md_latex() |> I()` parturient (@eq-taylor-expansion). Quam diu etiam furor iste tuus nos eludet?^[Fabio vel iudice vincam, sunt in culpa qui officia [@schelling1971].] Ut enim ad minim veniam, @sec-heading-5 (`@sec-heading-5`) or simply click [here](#sec-heading-5) (`[here](#sec-heading-5)`) quis nostrud exercitation [@fisher1932].
 
 ##### Heading 5 {#sec-heading-5}
 
@@ -51,17 +51,19 @@ Ab illo tempore, ab est sed immemorabili. **Cum sociis natoque penatibus et magn
 ::: {#cnj-hypothesis-test}
 ## Data Test – Full Version
 
+Petierunt uti sibi concilium totius Galliae in diem certam indicere. Morbi fringilla convallis sapien, id pulvinar odio volutpat (@eq-hypothesis-test). A communi observantia non est recedendum.
+
 $$
 \begin{cases}
 \text{H}_{0}: \Delta \ \text{Adjusted} \ \text{R}^{2} \leq \text{MES} \quad \text{or} \quad \text{F-test is not significant} \ (\alpha \geq 0.05) \\
 \text{H}_{a}: \Delta \ \text{Adjusted} \ \text{R}^{2} > \text{MES} \quad \text{and} \quad \text{F-test is significant} \ (\alpha < 0.05)
 \end{cases}
-$$
+$$ {#eq-hypothesis-test}
 :::
 
 ###### Heading 6 {#sec-heading-6}
 
-Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae. Salutantibus vitae elit libero, a pharetra augue. Quam diu etiam furor iste tuus nos eludet? Fabio vel iudice vincam, sunt in culpa qui officia^[Ab illo tempore, ab est sed immemorabili (@fig-test-1). Cum sociis natoque penatibus et magnis dis parturient [@markov2006].]. Quam temere in vitiis, legem sancimus haerentia. Quisque ut dolor gravida, placerat libero vel, euismod [@hopfield1984].
+Nihilne te nocturnum praesidium Palati, nihil urbis vigiliae [@aschoff1969]. Salutantibus vitae elit libero, a pharetra augue. Quam diu etiam furor iste tuus nos eludet? Fabio vel iudice vincam, sunt in culpa qui officia^[Ab illo tempore, ab est sed immemorabili (@fig-test-1). Cum sociis natoque penatibus et magnis dis parturient [@markov2006].]. Quam temere in vitiis, legem sancimus haerentia. Quisque ut dolor gravida, placerat libero vel, euismod [@hopfield1984].
 
 ```{r}
 #| code-fold: false
@@ -112,7 +114,7 @@ Test figure.
 
 Petierunt uti sibi @sec-heading-2 (`@sec-heading-2`) or simply click [here](#sec-heading-5) (`[here](#sec-heading-2)`) concilium totius Galliae in diem certam indicere. Morbi fringilla convallis sapien, id pulvinar odio volutpat. A communi observantia non est recedendum [@lorenz1963].
 
-Non equidem invideo, miror magis posuere velit aliquet. Quisque placerat facilisis egestas cillum dolore. Curabitur blandit tempus ardua ridiculus sed magna. Contra legem facit qui id facit quod lex prohibet. Petierunt uti sibi concilium totius Galliae in diem certam indicere [@watson1953].
+Non equidem invideo, miror magis posuere velit aliquet [@bulus]. Quisque placerat facilisis egestas cillum dolore [@popper2005a]. Curabitur blandit tempus ardua ridiculus sed magna [@redeglobo2017]. Contra legem facit qui id facit quod lex prohibet [@ropensci]. Petierunt uti sibi concilium totius Galliae in diem certam indicere [@watson1953].
 
 ## References {.unnumbered}
 
