--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,47 @@
+@article{aschoff1969,
+  title = {Phasenlage der Tagesperiodik in Abhängigkeit von Jahreszeit und Breitengrad},
+  author = {Aschoff, Jürgen},
+  date = {1969-08-01},
+  journaltitle = {Oecologia},
+  shortjournal = {Oecologia},
+  volume = {3},
+  number = {2},
+  pages = {125--165},
+  issn = {1432-1939},
+  doi = {10.1007/BF00416979},
+  url = {https://doi.org/10.1007/BF00416979},
+  urldate = {2024-11-27},
+  abstract = {Es wird die Hypothese vertreten, daß die regelhaften jahreszeitlichen Änderungen der Phasenbeziehung zwischen Aktivitätsrhythmik und natürlichem Licht-Dunkel-Wechsel auf der Grundlage spezieller Synchronisations-mechanismen erklärt werden können. Im Teil 1.1 werden die endogenen und exogenen Faktoren besprochen, die theoretisch die Phase zu beeinflussen vermögen. Die Überlegungen führen zu dem Schluß, daß das Licht-Dunkel-Verhältnis und die Dauer der Dämmerung im wesentlichen die Phase bestimmen. Experimentelle Belege sind in Teil 1.2 enthalten. In Teil 2 werden Freilandbeobachtungen über Beginn und Ende der Aktivität von Vögeln neu ausgewertet. Diese Ergebnisse, wie auch Meßwerte der Aktivität von Tieren in Innenräumen (Teil 3), stützen die Hypothese. Sie zeigen alle maximal voreilende Phasen im Mittsommer bei tagaktiven Arten bzw. im Mittwinter bei einer nachtaktiven Art. Einige, in Teil 4 erwähnte Ausnahmen von dieser Regel, werfen die Frage auf, in welchem Ausmaß die Ergebnisse verallgemeinert werden dürfen. In der Arbeit werden auch die einheitlichen jahreszeitlichen Änderungen der Aktivitätszeit erörtert.},
+  langid = {ngerman},
+  keywords = {biological rhythms,biological sciences,chronobiology,latitude},
+  note = {Phasing of diurnal rhythms as a function of season and latitude},
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Aschoff - 1969 - Phasenlage der Tagesperiodik in Abhängigkeit von Jahreszeit und Breitengrad.pdf}
+}
+
+@dataset{begueria2024,
+  title = {{{SPEIbase}} v.2.10: a comprehensive tool for global drought analysis},
+  shorttitle = {{{SPEIbase}} v.2.10 [{{Dataset}}]},
+  author = {Beguería, Santiago and Vicente Serrano, Sergio M. and Reig-Gracia, Fergus and Latorre Garcés, Borja},
+  date = {2024-07},
+  publisher = {DIGITAL.CSIC},
+  doi = {10.13039/501100000780},
+  url = {https://digital.csic.es/handle/10261/364137},
+  urldate = {2025-01-28},
+  abstract = {The SPEI database (SPEIbase) provides a comprehensive global record of drought conditions. It offers a standardized measure of drought, the Standardized Precipitation-Evapotranspiration Index (SPEI), computed at multiple time scales ranging from monthly to 48 months. The SPEI index considers both precipitation and potential evapotranspiration (PET), estimated using the FAO-56 Penman-Monteith method. This approach provides a robust and accurate assessment of drought conditions across various regions and timeframes. SPEIbase is freely accessible and can be used to support a wide range of applications, including drought monitoring, risk assessment, and climate change studies. This is an update of the SPEIbase v2.9 (https://digital.csic.es/handle/10261/332007).-- What’s new in version 2.10: 1) Based on the CRU TS 4.08 dataset, spanning the period between January 1901 to December 2023. For more details on the SPEI visit http://sac.csic.es/spei For more details on the SPEI database visit https://spei.csic.es/},
+  langid = {english},
+  annotation = {Accepted: 2024-07-19T10:34:04Z}
+}
+
+@software{bulus,
+  title = {{{\{pwrss\}}}: {{Statistical}} power and sample size calculation},
+  shorttitle = {\{pwrss\}},
+  author = {Bulus, Metin},
+  doi = {10.32614/CRAN.package.pwrss},
+  url = {https://CRAN.R-project.org/package=pwrss},
+  abstract = {Statistical power and minimum required sample size calculations for (1) testing a proportion (one-sample) against a constant, (2) testing a mean (one-sample) against a constant, (3) testing difference between two proportions (independent samples), (4) testing difference between two means or groups (parametric and non-parametric tests for independent and paired samples), (5) testing a correlation (one-sample) against a constant, (6) testing difference between two correlations (independent samples), (7) testing a single coefficient in multiple linear regression, logistic regression, and Poisson regression (with standardized or unstandardized coefficients, with no covariates or covariate adjusted), (8) testing an indirect effect (with standardized or unstandardized coefficients, with no covariates or covariate adjusted) in the mediation analysis (Sobel, Joint, and Monte Carlo tests), (9) testing an R-squared against zero in linear regression, (10) testing an R-squared difference against zero in hierarchical regression, (11) testing an eta-squared or f-squared (for main and interaction effects) against zero in analysis of variance (could be one-way, two-way, and three-way), (12) testing an eta-squared or f-squared (for main and interaction effects) against zero in analysis of covariance (could be one-way, two-way, and three-way), (13) testing an eta-squared or f-squared (for between, within, and interaction effects) against zero in one-way repeated measures analysis of variance (with non-sphericity correction and repeated measures correlation), and (14) testing goodness-of-fit or independence for contingency tables. Alternative hypothesis can be formulated as "not equal", "less", "greater", "non-inferior", "superior", or "equivalent" in (1), (2), (3), and (4); as "not equal", "less", or "greater" in (5), (6), (7) and (8); but always as "greater" in (9), (10), (11), (12), (13), and (14).},
+  keywords = {brazil,computer science,exact sciences,nosource,power analysis,r (programming language),r packages}
+}
+
 @article{einstein1905a,
   title = {Does the inertia of a body depend upon its energy-content?},
   author = {Einstein, Albert},
@@ -8,7 +52,7 @@
   pages = {639--641},
   langid = {english},
   keywords = {exact sciences,extraordinary publications,physics},
-  file = {G:\Meu Drive\Zotero\files\Einstein - 1905 - Does the inertia of a body depend upon its energy-content.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Einstein - 1905 - Does the inertia of a body depend upon its energy-content.pdf}
 }
 
 @article{einstein1935,
@@ -26,7 +70,7 @@
   urldate = {2023-10-23},
   langid = {english},
   keywords = {exact sciences,extraordinary publications,mecânica quântica,physics},
-  file = {G:\Meu Drive\Zotero\files\Einstein - 1935 - Can quantum-mechanical description of physical reality be considered complete.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Einstein - 1935 - Can quantum-mechanical description of physical reality be considered complete.pdf}
 }
 
 @article{fisher1932,
@@ -44,7 +88,7 @@
   abstract = {Logicians have long distinguished two modes of human reasoning, under the respective names of deductive and inductive reasoning. In deductive reasoning we attempt to argue from a hypothesis to its necessary consequences, which may be verifiable by observation; that is, to argue from the general to the particular. In inductive reasoning we attempt to argue from the particular, which is typically a body of observational material, to the general, which is typically a theory applicable to future experience. In statistical language we are attempting to argue from the sample to the population, from which it was drawn. Since recent statistical work has shown that this type of argument can be carried out with exactitude in a usefully large class of cases(2, 3), by means of conceptions somewhat different from those of the classical theory of probability, it may be useful briefly to restate the logical and mathematical distinctions which have to be drawn.},
   langid = {english},
   keywords = {exact sciences,extraordinary publications,hypothesis tests,likelihood,probability and statistics,test of significance},
-  file = {G:\Meu Drive\Zotero\files\Fisher - 1932 - Inverse probability and the use of Likelihood.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Fisher - 1932 - Inverse probability and the use of Likelihood.pdf}
 }
 
 @article{hopfield1984,
@@ -62,7 +106,7 @@
   abstract = {A model for a large network of "neurons" with a graded response (or sigmoid input-output relation) is studied. This deterministic system has collective properties in very close correspondence with the earlier stochastic model based on McCulloch - Pitts neurons. The content- addressable memory and other emergent collective properties of the original model also are present in the graded response model. The idea that such collective properties are used in biological systems is given added credence by the continued presence of such properties for more nearly biological "neurons." Collective analog electrical circuits of the kind described will certainly function. The collective states of the two models have a simple correspondence. The original model will continue to be useful for simulations, because its connection to graded response systems is established. Equations that include the effect of action potentials in the graded response system are also developed.},
   langid = {english},
   keywords = {artificial intelligence,computer science,exact sciences,extraordinary publications,neural networks,nobel prize winners,probability and statistics},
-  file = {G:\Meu Drive\Zotero\files\Hopfield - 1984 - Neurons with graded response have collective computational properties like those of two-state neuron.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Hopfield - 1984 - Neurons with graded response have collective computational properties like those of two-state neuron.pdf}
 }
 
 @article{lorenz1963,
@@ -80,7 +124,7 @@
   abstract = {Finite systems of deterministic ordinary nonlinear differential equations may be designed to represent forced dissipative hydrodynamic flow. Solutions of these equations can be identified with trajectories in phase space. For those systems with bounded solutions, it is found that nonperiodic solutions are ordinarily unstable with respect to small modifications, so that slightly differing initial states can evolve into considerably different states. Systems with bounded solutions are shown to possess bounded numerical solutions. A simple system representing cellular convection is solved numerically. All of the solutions are found to be unstable, and almost all of them are nonperiodic. The feasibility of very-long-range weather prediction is examined in the light of these results.},
   langid = {english},
   keywords = {chaotic systems,complexity science,extraordinary publications,historical publications,interdisciplinary fields},
-  file = {G:\Meu Drive\Zotero\data\storage\76LTW9ET\Lorenz - 1963 - Deterministic Nonperiodic Flow.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/data/storage/76LTW9ET/Lorenz - 1963 - Deterministic Nonperiodic Flow.pdf}
 }
 
 @article{markov2006,
@@ -99,11 +143,11 @@
   abstract = {This study investigates a text excerpt containing 20,000 Russian letters of the alphabet, excluding \$\textbackslash Cprime\$ and \$\textbackslash Cdprime\$, from Pushkin's novel Eugene Onegin–the entire first chapter and sixteen stanzas of the second.},
   langid = {english},
   keywords = {artificial intelligence,computer science,exact sciences,extraordinary publications,natural language models,probability and statistics},
-  file = {G:\Meu Drive\Zotero\files\Markov - 2006 - An example of statistical investigation of the text eugene onegin concerning.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Markov - 2006 - An example of statistical investigation of the text eugene onegin concerning.pdf}
 }
 
 @article{neyman1928,
-  title = {On the use and interpretation of certain test criteria for purposes of statistical inference: part {{I}}},
+  title = {On the use and interpretation of certain test criteria for purposes of statistical inference: {{Part I}}},
   shorttitle = {On the use and interpretation of certain test criteria for purposes of statistical inference},
   author = {Neyman, J. and Pearson, E. S.},
   date = {1928},
@@ -120,11 +164,11 @@
   urldate = {2024-09-30},
   langid = {english},
   keywords = {exact sciences,extraordinary publications,hypothesis tests,hypothetico–deductive method,probability and statistics,statistical inference},
-  file = {G:\Meu Drive\Zotero\files\Neyman and Pearson - 1928 - On the use and interpretation of certain test criteria for purposes of statistical inference part I.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Neyman and Pearson - 1928 - On the use and interpretation of certain test criteria for purposes of statistical inference part I.pdf}
 }
 
 @article{neyman1928a,
-  title = {On the use and interpretation of certain test criteria for purposes of statistical inference: part {{II}}},
+  title = {On the use and interpretation of certain test criteria for purposes of statistical inference: {{Part II}}},
   shorttitle = {On the use and interpretation of certain test criteria for purposes of statistical inference},
   author = {Neyman, J. and Pearson, E. S.},
   date = {1928},
@@ -141,7 +185,61 @@
   urldate = {2024-09-30},
   langid = {english},
   keywords = {exact sciences,extraordinary publications,hypothesis tests,hypothetico–deductive method,probability and statistics,statistical inference},
-  file = {G:\Meu Drive\Zotero\files\Neyman and Pearson - 1928 - On the use and interpretation of certain test criteria for purposes of statistical inference part I 1.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Neyman and Pearson - 1928 - On the use and interpretation of certain test criteria for purposes of statistical inference part I 1.pdf}
+}
+
+@book{popper2005a,
+  title = {The logic of scientific discovery},
+  author = {Popper, Karl Raimund},
+  date = {2005},
+  origdate = {1934},
+  publisher = {Routledge},
+  location = {London},
+  abstract = {Described by the philosopher A.J. Ayer as a work of 'great originality and power', this book revolutionized contemporary thinking on science and knowledge. Ideas such as the now legendary doctrine of 'falsificationism' electrified the scientific community, influencing even working scientists, as well as post-war philosophy. This astonishing work ranks alongside The Open Society and Its Enemies as one of Popper's most enduring books and contains insights and arguments that demand to be read to this day.},
+  isbn = {978-0-203-99462-7},
+  langid = {english},
+  origlanguage = {de},
+  origtitle = {Logik der {{Forschung}}},
+  keywords = {philosophy,philosophy of science,popper,science},
+  annotation = {OCLC: 1241674371\\
+origpublisher: Verlag von Julius Springer},
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Popper - 2005 - The logic of scientific discovery.epub;/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Popper - 2005 - The logic of scientific discovery.pdf}
+}
+
+@software{rcoreteama,
+  title = {R: {{A}} language and environment for statistical computing},
+  author = {{R Core Team}},
+  location = {Vienna, Austria},
+  url = {https://www.R-project.org},
+  organization = {R Foundation for Statistical Computing},
+  keywords = {computer science,data science,exact sciences,nosource,programming,r (programming language)}
+}
+
+@video{redeglobo2017,
+  entrysubtype = {TV broadcast},
+  title = {Metade da população se sente mal no horário de verão, revela pesquisa},
+  booktitle = {Fantástico},
+  editor = {{Rede Globo}},
+  editortype = {director},
+  date = {2017-10-15},
+  publisher = {Rede Globo},
+  location = {Rio de Janeiro, RJ},
+  url = {https://g1.globo.com/fantastico/noticia/2017/10/metade-da-populacao-se-sente-mal-no-horario-de-verao-revela-pesquisa.html},
+  abstract = {Efeitos da mudança do relógio na saúde foram pesquisados pela 1ª vez. Cientistas defendem que cada um de nós tem um tempo próprio.},
+  annote = {Fantástico},
+  langid = {brazilian},
+  keywords = {nosource},
+  note = {Half of the population feels unwell during daylight saving time, research reveals}
+}
+
+@book{ropensci,
+  title = {{{rOpenSci}} packages: development, maintenance, and peer review},
+  shorttitle = {{{rOpenSci}} packages},
+  author = {{rOpenSci} and Anderson, Brooke and Chamberlain, Scott and DeCicco, Laura and Gustavsen, Julia and Krystalli, Anna and Lepore, Mauro and Mullen, Lincoln and Ram, Karthik and Ross, Noam and Salmon, Maëlle and Vidoni, Melina and Riederer, Emily and Sparks, Adam and Hollister, Jeff},
+  publisher = {rOpenSci},
+  url = {https://devguide.ropensci.org/},
+  langid = {english},
+  keywords = {computer science,exact sciences,nosource,open source,r (programming language),r packages}
 }
 
 @article{schelling1971,
@@ -160,11 +258,11 @@
   abstract = {Some segregation results from the practices of organizations, some from specialized communication systems, some from correlation with a variable that is non‐random; and some results from the interplay of individual choices. This is an abstract study of the interactive dynamics of discriminatory individual choices. One model is a simulation in which individual members of two recognizable groups distribute themselves in neighborhoods defined by reference to their own locations. A second model is analytic and deals with compartmented space. A final section applies the analytics to ‘neighborhood tipping.’ The systemic effects are found to be overwhelming: there is no simple correspondence of individual incentive to collective results. Exaggerated separation and patterning result from the dynamics of movement. Inferences about individual motives can usually not be drawn from aggregate patterns. Some unexpected phenomena, like density and vacancy, are generated. A general theory of ‘tipping’ begins to emerge.},
   langid = {english},
   keywords = {agent-based modeling,agent-based models,complexity science,extraordinary publications,game theory,segregation},
-  file = {G:\Meu Drive\Zotero\files\Schelling - 1971 - Dynamic models of segregation.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Schelling - 1971 - Dynamic models of segregation.pdf}
 }
 
 @article{watson1953,
-  title = {Molecular structure of nucleic acids: a structure for deoxyribose nucleic acid},
+  title = {Molecular structure of nucleic acids: {{A}} structure for deoxyribose nucleic acid},
   shorttitle = {Molecular structure of nucleic acids},
   author = {Watson, J. D. and Crick, F. H. C.},
   date = {1953-04},
@@ -181,5 +279,5 @@
   issue = {4356},
   langid = {english},
   keywords = {biological sciences,biology,extraordinary publications,genética},
-  file = {G:\Meu Drive\Zotero\files\Watson - 1953 - Molecular structure of nucleic acids.pdf}
+  file = {/home/danielvartan/Insync/danvartan@gmail.com/Google Drive/Zotero/files/Watson - 1953 - Molecular structure of nucleic acids.pdf}
 }
