Fix the Director label in CSL

--- a/references.bib
+++ b/references.bib
@@ -28,8 +28,7 @@
   url = {https://digital.csic.es/handle/10261/364137},
   urldate = {2025-01-28},
   abstract = {The SPEI database (SPEIbase) provides a comprehensive global record of drought conditions. It offers a standardized measure of drought, the Standardized Precipitation-Evapotranspiration Index (SPEI), computed at multiple time scales ranging from monthly to 48 months. The SPEI index considers both precipitation and potential evapotranspiration (PET), estimated using the FAO-56 Penman-Monteith method. This approach provides a robust and accurate assessment of drought conditions across various regions and timeframes. SPEIbase is freely accessible and can be used to support a wide range of applications, including drought monitoring, risk assessment, and climate change studies. This is an update of the SPEIbase v2.9 (https://digital.csic.es/handle/10261/332007).-- What’s new in version 2.10: 1) Based on the CRU TS 4.08 dataset, spanning the period between January 1901 to December 2023. For more details on the SPEI visit http://sac.csic.es/spei For more details on the SPEI database visit https://spei.csic.es/},
-  langid = {english},
-  annotation = {Accepted: 2024-07-19T10:34:04Z}
+  langid = {english}
 }
 
 @software{bulus,
@@ -74,7 +73,7 @@
 }
 
 @article{fisher1932,
-  title = {Inverse probability and the use of {{Likelihood}}},
+  title = {Inverse probability and the use of likelihood},
   author = {Fisher, R. A.},
   date = {1932-07},
   journaltitle = {Mathematical Proceedings of the Cambridge Philosophical Society},
